Feature: don't determine gender by two letter(MR,MS)(ALFA-234)
Reviewed-by: Szymon Mrozowski <smrozowski@silenteight.com>
Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/146